--- a/FileLocker/build.gradle
+++ b/FileLocker/build.gradle
@@ -20,7 +20,7 @@ buildscript {
         constraint_layout_version = '1.1.3'
         coroutines_version = '1.2.1'
         espresso_version = '3.2.0'
-        gradleVersion = '3.5.1'
+        gradleVersion = '4.1.1'
         junit_version = '4.12'
         kotlin_version = '1.3.50'
         ktx_version = '1.1.0'
@@ -29,6 +29,7 @@ buildscript {
         navigation_version = '2.1.0'
         recyclerview_version = '1.1.0-rc01'
         security_crypto_version = '1.0.0-alpha02'
+        biometric_version = '1.0.1'
         test_runner_version = '1.2.0'
     }
     repositories {
